--- a/2DO-Client/2DO-Client.csproj
+++ b/2DO-Client/2DO-Client.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <Folder Include="Controller\" />
+    <Folder Include="Framewrok\" />
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
