--- a/2DO-Service/App.config
+++ b/2DO-Service/App.config
@@ -11,8 +11,8 @@
   app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
     <services>
-      <service name="_2DO_Server.2DoService">
-        <endpoint address="" binding="basicHttpBinding" contract="_2DO_Server.I2DoService">
+      <service name="_2DO_Service.ToDoService">
+        <endpoint address="" binding="basicHttpBinding" contract="_2DO_Service.IToDoService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -20,7 +20,7 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/_2DO_Server/Service1/" />
+            <add baseAddress="http://localhost:8733/2DO-Service/Test" />
           </baseAddresses>
         </host>
       </service>
