--- a/2DO-Service/App.config
+++ b/2DO-Service/App.config
@@ -1,11 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" />
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
   </system.web>
   <!-- When deploying the service library project, the content of the config file must be added to the host's 
   app.config file. System.Configuration does not support config files for libraries. -->
@@ -30,14 +44,24 @@
         <behavior>
           <!-- To avoid disclosing metadata information, 
           set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True" />
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+          <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
   </system.serviceModel>
-
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
