--- a/2DO-Client/2DO-Client.csproj
+++ b/2DO-Client/2DO-Client.csproj
@@ -22,15 +22,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Views\Assets\minus_icon.png">
+    <Resource Include="Views\Assets\minus_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Views\Assets\pen_icon.png">
+    </Resource>
+    <Resource Include="Views\Assets\pen_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Views\Assets\plus_icon.png">
+    </Resource>
+    <Resource Include="Views\Assets\plus_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
