--- a/2DO-Service/App.config
+++ b/2DO-Service/App.config
@@ -48,7 +48,7 @@
           <!-- To receive exception details in faults for debugging purposes, 
           set the value below to true.  Set to false before deployment 
           to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
