--- a/2DO-Client/2DO-Client.csproj
+++ b/2DO-Client/2DO-Client.csproj
@@ -20,12 +20,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Views\Assets\export_icon.png" />
+    <None Remove="Views\Assets\import_icon.png" />
     <None Remove="Views\Assets\minus_icon.png" />
     <None Remove="Views\Assets\pen_icon.png" />
     <None Remove="Views\Assets\plus_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Views\Assets\export_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Views\Assets\import_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Views\Assets\minus_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
